refactored getAllSubscribers to GetHasSubscribed
